[package]
name = "arroyo-worker"
version = "0.7.0"
edition = "2021"

[features]
default = []
kafka-sasl = ["rdkafka/sasl", "rdkafka/ssl-vendored"]

[dependencies]
arroyo-types = { path = "../arroyo-types" }
arroyo-macro = { path = "../arroyo-macro" }
arroyo-state = { path = "../arroyo-state" }
arroyo-storage = { path = "../arroyo-storage" }
arroyo-rpc = { path = "../arroyo-rpc" }
arroyo-server-common = { path = "../arroyo-server-common" }
arroyo-metrics =  { path = "../arroyo-metrics" }

rand = "0.8"
bincode = "2.0.0-rc.3"
wasmtime = "=10.0.2"
lazy_static = "1.4.0"
petgraph = "0.6"
chrono = "0.4"
prometheus = {version = "0.13", features = ["process"] }
futures = "0.3"
tokio = { version = "1", features = ["full", "tracing"] }
tokio-stream = { version = "0.1", features = ["net"] }
async-trait = "0.1.68"
async-stream = "0.3.4"
stacker = "0.1"
bytes = "1.4"
once_cell = "1.17.1"
local-ip-address = "0.5"
serde_json = "1.0"
serde_json_path = "0.6.0"
serde = "1.0"
sha2 = "0.10"
md-5 = "0.10"
hex = "0.4"
url = "2.4.0"
ordered-float = "3"
deltalake = {version = "0.16.0", features = ["s3", "arrow"] }
arrow = { workspace = true }
parquet = { workspace = true, features = ["async"]}
arrow-array = { workspace = true}
aws-sdk-kinesis = { version = "0.21", default-features = false, features = ["rt-tokio", "native-tls"] }
aws-config = { version = "0.51", default-features = false, features = ["rt-tokio", "native-tls"] }
uuid = {version = "1.4.1", features = ["v4"]}
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"

tonic = { workspace = true }
prost = "0.11"

governor = "0.6"

#logging
tracing = "0.1"

# connectors
rdkafka = { version = "0.33", features = ["cmake-build"] }
rdkafka-sys = "4.5.0"
eventsource-client = "0.11.0"
regex = "1.8.1"
anyhow = "1.0.71"
typify = "0.0.13"
regress = "0.6.0"
tokio-tungstenite = { version = "0.20.1", features = ["native-tls"] }
fluvio = {version = "=0.21", features = ["openssl"]}
fluvio-future = "0.6.0"
object_store = {workspace = true }
reqwest = "0.11.20"
memchr = "2.6.3"
apache-avro = "0.16.0"

[dev-dependencies]
test-case = "3"
