[package]
name = "arroyo"
version = "0.9.0-dev"
edition = "2021"

authors = ["Arroyo Systems <support@arroyo.systems>"]

license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/ArroyoSystems/arroyo"
homepage = "https://arroyo.dev"
description = """
Arroyo is a distributed stream processor that lets users ask complex questions of high-volume real-time data by writing SQL.

This CLI can be used to run Arroyo clusters in Docker
"""

categories = ["database-implementations", "web-programming"]

keywords = ["streaming", "data", "sql", "event-processing"]


[dependencies]
arroyo-openapi = { path = "../arroyo-openapi" }
sqlparser = "0.4.0"
anyhow = {version = "1.0.75", features = ["backtrace"]}
bollard = "0"
clap = { version = "4", features = ["derive"] }
open = "5.0.0"
reqwest = "0.11.20"
tokio = { version = "1.32.0", features = ["full"] }
tokio-stream = "0.1.14"
crossterm = "0.27.0"
comfy-table = "7.1.0"
url = { version = "2.4.1", features = [] }
rustyline = { version = "12.0.0", features = ["derive"] }
dirs = "5.0.1"
eventsource-client = "0.12.0"
futures = "0.3.29"
serde_json = "1.0.108"
tracing = "0.1.40"
