
[package]
name = "pipeline"
version = "1.0.0"
edition = "2021"

[dependencies]
types = { path = "../types" }
udfs = { path = "../udfs_dir/udfs" }
petgraph = "0.6"
bincode = "=2.0.0-rc.3"
bincode_derive = "=2.0.0-rc.3"
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
arrow = { workspace = true}
arrow-array = { workspace = true}
arroyo-types = { path = "../../arroyo-types" }
arroyo-worker = { path = "../../arroyo-worker" }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
