
[package]
name = "pipeline"
version = "1.0.0"
edition = "2021"

[dependencies]
types = { path = "../types" }
udfs = { path = "../udfs_dir/udfs" }
anyhow = "1.0"
petgraph = "0.6"
bincode = "=2.0.0-rc.3"
bincode_derive = "=2.0.0-rc.3"
chrono = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
hex = "0.4"
arrow = { workspace = true}
arrow-array = { workspace = true}
arrow-buffer = { workspace = true}
arrow-schema = { workspace = true, features = ["serde"]}
arroyo-types = { path = "../../arroyo-types" }
arroyo-worker = { path = "../../arroyo-worker" }
arroyo-formats = { path = "../../arroyo-formats" }
arroyo-sql-macro = { path = "../../arroyo-sql-macro" }
datafusion-proto = "31.0"
tracing = { version = "0.1.25" }
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
