
[package]
name = "wasm-fns"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
types = { path = "../types" }

bincode = "=2.0.0-rc.3"
bincode_derive = "=2.0.0-rc.3"
arroyo-types = { path = "../../arroyo-types" }
wee_alloc = "0.4.5"
wasm-bindgen = "0.2"
serde_json = "1.0"
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
