[package]
name = "arroyo-api"
version = "0.16.0-dev"
edition = "2024"
license = "MIT OR Apache-2.0"

[features]
default = []

[dependencies]
arroyo-types = { path = "../arroyo-types" }
arroyo-planner = { path = "../arroyo-planner" }
arroyo-rpc = { path = "../arroyo-rpc" }
arroyo-server-common = { path = "../arroyo-server-common" }
arroyo-operator = { path = "../arroyo-operator" }
arroyo-connectors = { path = "../arroyo-connectors" }
arroyo-datastream = { path = "../arroyo-datastream" }
arroyo-formats = { path = "../arroyo-formats" }
arroyo-udf-host = { path = "../arroyo-udf/arroyo-udf-host" }
arroyo-udf-python = { path = "../arroyo-udf/arroyo-udf-python" }

tonic = { workspace = true }
prost = {workspace = true}
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.12"
tower = {workspace = true}

arrow = { workspace = true }
arrow-schema = {workspace = true, features = ["serde"]}

petgraph = {workspace = true, features = ["serde-1"]}

http = "1"
tower-http = { workspace = true, features = ["trace", "fs", "cors", "validate-request", "auth", "compression-zstd"]}
axum = {workspace = true, features = ["tokio", "macros"]}
axum-extra = { version = "0.9", features = ["typed-header"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
thiserror = "2"
utoipa = { workspace = true }
utoipa-swagger-ui = { version = "7", features = ["axum"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# logging
tracing = "0.1"
anyhow = "1.0.70"

# postgres
postgres-types = { version = "*", features = ["derive"] }
tokio-postgres = { version = "*", features = ["with-serde_json-1", "with-time-0_3", "with-uuid-1"] }

# sqlite
rusqlite = { workspace = true, features = ["bundled", "serde_json", "time"] }

futures = "0.3"
futures-util = "0.3.28"
time = "0.3"
cornucopia_async = { workspace = true, features = ["with-serde_json-1"]}
apache-avro = { workspace = true }
toml = "0.8"
rust-embed = { version = "8", features = ["axum"] }
mime_guess = "2.0.4"

[build-dependencies]
cornucopia = { workspace = true }
postgres = "0.19.5"
arroyo-types = { path = "../arroyo-types" }
utoipa = { workspace = true }
rusqlite = {workspace =  true}
refinery = { version = "0.8.14", features = ["rusqlite"] }