[package]
name = "arroyo-bin"
version = "0.11.0-dev"
edition = "2021"

[features]
kafka-sasl = ["arroyo-connectors/kafka-sasl", "arroyo-worker/kafka-sal"]

[dependencies]
arroyo-types = { path ="../arroyo-types" }
arroyo-connectors = { path ="../arroyo-connectors" }
arroyo-controller = { path = "../arroyo-controller" }
arroyo-api = { path = "../arroyo-api" }
arroyo-worker = { path = "../arroyo-worker" }
arroyo-server-common = { path = "../arroyo-server-common" }
arroyo-compiler-service = { path = "../arroyo-compiler-service" }
arroyo-node = { path = "../arroyo-node" }

clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = "1"
serde_json = "1"
tracing = "0.1"

postgres-types = { version = "*", features = ["derive"] }
tokio-postgres = { version = "*", features = ["with-serde_json-1", "with-time-0_3", "with-uuid-1"] }
deadpool-postgres = { workspace = true }
cornucopia_async = { workspace = true }
rusqlite = "0.31.0"
uuid = { version = "1.7.0", features = ["v4"] }
refinery = { version = "0.8.14" , features = ["tokio-postgres", "rusqlite"] }
anyhow = { version = "1.0.79", features = [] }
dirs = "5.0.1"