[package]
name = "arroyo-compiler-service"
version = "0.13.0-dev"
edition = "2021"

[dependencies]
arroyo-types = { path ="../arroyo-types" }
arroyo-rpc = { path = "../arroyo-rpc" }
arroyo-server-common = { path = "../arroyo-server-common" }
arroyo-storage = { path = "../arroyo-storage" }

tonic = {workspace = true}
prost = {workspace = true}
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
anyhow = "1.0.75"
serde_json = "1.0.106"
base64 = "0.21"
dlopen2 = "0.7"
toml = "0.8.12"
