[package]
name = "arroyo-compiler-service"
version = "0.16.0-dev"
edition = "2024"

[dependencies]
arroyo-rpc = { path = "../arroyo-rpc" }
arroyo-server-common = { path = "../arroyo-server-common" }
arroyo-storage = { path = "../arroyo-storage" }

tonic = {workspace = true}
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
dlopen2 = { workspace = true }
toml = { workspace = true }
