[package]
name = "arroyo-connectors"
version = "0.15.0-dev"
edition = "2021"

[lints.clippy]
to_string_trait_impl = "allow"

[features]
all-connectors = [
    "redis",
    "fluvio",
    "kinesis",
    "rabbitmq",
    "mqtt",
    "nats",
]
redis = ["dep:redis"]
fluvio = ["dep:fluvio"]
kinesis = ["dep:aws-sdk-kinesis"]
rabbitmq = ["dep:rabbitmq-stream-client"]
mqtt = ["dep:rumqttc"]
nats = ["dep:async-nats", "dep:nkeys"]

[dependencies]
arroyo-types = { path = "../arroyo-types" }
arroyo-storage = { path = "../arroyo-storage" }
arroyo-rpc = { path = "../arroyo-rpc" }
arroyo-formats = { path = "../arroyo-formats" }
arroyo-operator = { path = "../arroyo-operator" }
arroyo-state = { path = "../arroyo-state" }

arrow = { workspace = true }
datafusion = { workspace = true }
async-trait = "0.1"
bincode = "2.0.0-rc.3"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
typify = "0.0.13"
prost = {workspace = true}
tonic = {workspace = true}
governor = "0.8.0"
anyhow = "1.0.71"
tracing = "0.1.37"
regress = "0.10.0"
futures = "0.3.28"
rand = { workspace = true }
bytes = "1.5.0"
url = "2.5.0"
itertools = "0.14.0"
regex = "1"

##########################
# connector dependencies #
##########################

rustls-native-certs =  { version = "0.8" }
rustls-pemfile = { version = "2" }
tokio-rustls = { version = "0.25" }
rustls = { version = "0.22" }

# Kafka
aws-msk-iam-sasl-signer = { version = "1.0.0" }
rdkafka = { version = "0.37", features = ["cmake-build", "tracing", "sasl", "ssl-vendored", "zstd"] }
rdkafka-sys = { version = "4.8.0"}
sasl2-sys = { version = "0.1.22", features = ["vendored"]}

# SSE
eventsource-client = "0.13.0"

# Websocket
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

# Webhook
reqwest = { workspace = true, features = ["stream"] }

# RabbitMQ Stream
rabbitmq-stream-client = { version = "0.7", optional = true }

# Redis
redis = { version = "0.28", features = ["default", "tokio-rustls-comp", "cluster-async", "connection-manager"], optional = true }

# Fluvio
fluvio = {version = "0.24", features = ["openssl"], optional = true}

# Kinesis
aws-sdk-kinesis = { version = "1.44", optional = true }
aws-config = { workspace = true }
uuid = { version = "1.7.0", features = ["v4"] }

# Filesystem
parquet = { workspace = true, features = ["async"] }
object_store = { workspace = true }
deltalake = { workspace = true, features = ["s3", "gcs"] }
async-compression = { version = "0.4.3", features = ["tokio", "zstd", "gzip"] }

# MQTT
rumqttc = { version = "0.24.0", features = ["url"], optional = true }

# NATS
async-nats = { version = "0.38.0", optional = true }
nkeys = { version = "0.3.0", optional = true }

[build-dependencies]
glob = "0.3"
