[package]
name = "arroyo-controller"
version = "0.13.0-dev"
edition = "2021"

[features]
default = []

[dependencies]
arroyo-types = { path = "../arroyo-types" }
arroyo-datastream = { path = "../arroyo-datastream" }
arroyo-rpc = { path = "../arroyo-rpc" }
arroyo-state = { path = "../arroyo-state" }
arroyo-storage = { path = "../arroyo-storage" }
arroyo-server-common = { path = "../arroyo-server-common" }
arroyo-worker = { path = "../arroyo-worker" }

tonic = {workspace = true}
tonic-reflection = {workspace = true}

prost = {workspace = true}
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.12"
rand = "0.8"
bincode = { version = "2.0.0-rc.3", features = ["serde"]}
petgraph = {version = "0.6", features = ["serde-1"]}
quote = "1"
proc-macro2 = "1"
prettyplease = "0.2.4"
syn = {version = "2", features = ["full"]}
prometheus = "0.13"
async-trait = "0.1"
lazy_static = "1.4.0"
chrono = "0.4"
zstd = "0.13"

arrow-schema = {workspace = true}

serde = "1"

anyhow = "1.0.70"

# Kubernetes
kube = { version = "0.91", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.22.0", features = ["v1_30"] }
serde_yaml = {version = "0.9"}
shlex = "1.3"

# json-schema support
serde_json = "1.0"

# logging
tracing = "0.1"

# SQL
postgres-types = { version = "*", features = ["derive"] }
tokio-postgres = { version = "*", features = ["with-serde_json-1", "with-time-0_3", "with-uuid-1"] }
deadpool-postgres = { workspace = true }
futures = "0.3"
time = "0.3"
cornucopia_async = { workspace = true, features = ["with-serde_json-1"] }
thiserror = "1.0.40"
regex = "1.7.3"
reqwest = { version = "0.11.16", features = ["json"] }
uuid = "1.3.3"
async-stream = "0.3.5"
base64 = "0.21.5"
rusqlite = { version = "0.31.0", features = ["serde_json", "time"] }

[build-dependencies]
cornucopia = { workspace = true }
postgres = "0.19.5"
arroyo-types = { path = "../arroyo-types" }
rusqlite = "0.31.0"
refinery = { version = "0.8.14", features = ["rusqlite"] }
