[package]
name = "arroyo-controller"
version = "0.14.0-dev"
edition = "2021"

[features]
default = []

[dependencies]
arroyo-types = { path = "../arroyo-types" }
arroyo-datastream = { path = "../arroyo-datastream" }
arroyo-rpc = { path = "../arroyo-rpc" }
arroyo-state = { path = "../arroyo-state" }
arroyo-server-common = { path = "../arroyo-server-common" }
arroyo-worker = { path = "../arroyo-worker" }

tonic = {workspace = true}

prost = {workspace = true}
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.12"
rand = "0.8"
petgraph = {version = "0.7", features = ["serde-1"]}
prometheus = "0.13"
async-trait = "0.1"
lazy_static = "1.4.0"

serde = "1"

anyhow = "1.0.70"

# Kubernetes
kube = { version = "0.98", features = ["runtime", "derive"] }
k8s-openapi = { workspace = true, features = ["v1_30"] }
shlex = "1.3"

# json-schema support
serde_json = "1.0"

# logging
tracing = "0.1"

# SQL
postgres-types = { version = "*", features = ["derive"] }
tokio-postgres = { version = "*", features = ["with-serde_json-1", "with-time-0_3", "with-uuid-1"] }
futures = "0.3"
time = "0.3"
cornucopia_async = { workspace = true, features = ["with-serde_json-1"] }
thiserror = "1.0.40"
regex = "1.7.3"
rusqlite = { workspace = true, features = ["serde_json", "time"] }

[build-dependencies]
cornucopia = { workspace = true }
postgres = "0.19.5"
arroyo-types = { path = "../arroyo-types" }
rusqlite = { workspace = true }
refinery = { version = "0.8.14", features = ["rusqlite"] }
