[package]
name = "arroyo-controller"
version = "0.16.0-dev"
edition = "2024"

[features]
default = []

[dependencies]
arroyo-types = { path = "../arroyo-types" }
arroyo-datastream = { path = "../arroyo-datastream" }
arroyo-rpc = { path = "../arroyo-rpc" }
arroyo-state = { path = "../arroyo-state" }
arroyo-server-common = { path = "../arroyo-server-common" }
arroyo-worker = { path = "../arroyo-worker" }
arroyo-state-protocol = { path = "../arroyo-state-protocol" }
tonic = {workspace = true}

prost = {workspace = true}
tokio = { workspace = true }
tokio-stream = { workspace = true }
rand = { workspace = true }
petgraph = {workspace = true, features = ["serde-1"]}
prometheus = {workspace = true}
async-trait = { workspace = true }
lazy_static = { workspace = true }

serde = { workspace = true }

anyhow = { workspace = true }

# Kubernetes
kube = { version = "0.99", features = ["runtime", "derive"] }
k8s-openapi = { workspace = true, features = ["v1_30"] }
shlex = "1.3"

# json-schema support
serde_json = { workspace = true }

# logging
tracing = { workspace = true }

# SQL
postgres-types = { version = "*", features = ["derive"] }
tokio-postgres = { workspace = true }
futures = { workspace = true }
time = "0.3"
cornucopia_async = { workspace = true, features = ["with-serde_json-1"] }
thiserror = { workspace = true }
regex = { workspace = true }
rusqlite = { workspace = true, features = ["serde_json", "time"] }

[build-dependencies]
cornucopia = { workspace = true }
postgres = "0.19.5"
arroyo-types = { path = "../arroyo-types" }
rusqlite = { workspace = true }
refinery = { version = "0.8.14", features = ["rusqlite"] }
