[package]
name = "arroyo-datastream"
version = "0.16.0-dev"
edition = "2024"


[dependencies]
arroyo-rpc = { path = "../arroyo-rpc" }
arrow-schema = { workspace = true, features = ["serde"] }

petgraph = {workspace = true, features = ["serde-1"]}
serde = { workspace = true }
syn = { workspace = true }
bincode = { workspace = true, features = ["serde"]}
rand = { workspace = true }
anyhow = { workspace = true }
prost = {workspace = true}
serde_json = { workspace = true }
strum = { workspace = true }
datafusion-proto = { workspace = true }
itertools = { workspace = true }
