[package]
name = "arroyo-formats"
version = "0.16.0-dev"
edition = "2024"

[dependencies]
arroyo-types = { path = "../arroyo-types" }
arroyo-rpc = { path = "../arroyo-rpc" }

apache-avro = {workspace = true}
serde = { workspace = true }
serde_json = { workspace = true }
arrow = { workspace = true }
arrow-schema = { workspace = true }
arrow-array = { workspace = true}
arrow-json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
memchr = "2"
typify = { workspace = true }
schemars = "0.8"
prost = { workspace = true}
prost-reflect = { workspace = true}
prost-build = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
integer-encoding = "4.0.2"